--- a/iqiyi/src/main/res/layout/activity_search.xml
+++ b/iqiyi/src/main/res/layout/activity_search.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:background="@color/color_theme_background"
+    android:id="@+id/search_root">
 
     <!--返回按钮-->
     <ImageView
@@ -13,8 +14,8 @@
         android:layout_height="60px"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginLeft="20px"
-        android:layout_marginTop="20px"
+        android:layout_marginLeft="@dimen/margin_20px"
+        android:layout_marginTop="@dimen/margin_20px"
         android:background="@drawable/back_bg"/>
 
     <!--搜索-->
@@ -22,7 +23,7 @@
         android:id="@+id/search_custom_view"
         android:layout_width="870px"
         android:layout_height="80px"
-        android:layout_marginTop="20px"
+        android:layout_marginTop="@dimen/margin_20px"
         android:layout_marginStart="430px"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
