--- a/iqiyi/src/main/res/layout/fragment_search_history.xml
+++ b/iqiyi/src/main/res/layout/fragment_search_history.xml
@@ -49,7 +49,7 @@
         app:layout_constraintBottom_toBottomOf="@id/search_history_layout"
         app:layout_constraintStart_toEndOf="@id/search_history_layout"
         android:layout_marginStart="144px"
-        android:src="@drawable/ic_search_history_delete"
+        android:background="@drawable/ic_search_history_delete"
         android:visibility="visible"
         tools:ignore="MissingConstraints" />
 
