--- a/iqiyi/src/main/res/layout/fragment_search_result.xml
+++ b/iqiyi/src/main/res/layout/fragment_search_result.xml
@@ -4,7 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/color_theme_background">
 
     <!--结果类型-->
     <LinearLayout
@@ -18,6 +19,7 @@
         tools:ignore="MissingConstraints">
 
         <TextView
+            android:id="@+id/search_result_type_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="@dimen/title_text_size"
@@ -29,7 +31,7 @@
             android:layout_width="@dimen/search_result_type_btn_width"
             android:layout_height="@dimen/search_result_type_btn_height"
             android:layout_marginStart="@dimen/margin_38px"
-            android:textColor="@color/color_search_result_type_text"
+            android:textColor="@drawable/search_result_type_text_selector"
             android:background="@drawable/search_result_button_bg"
             android:textSize="@dimen/title_text_size"
             android:text="@string/search_result_relate_button"/>
@@ -39,7 +41,7 @@
             android:layout_width="@dimen/search_result_type_btn_width"
             android:layout_height="@dimen/search_result_type_btn_height"
             android:layout_marginStart="@dimen/margin_25px"
-            android:textColor="@color/color_search_result_type_text"
+            android:textColor="@drawable/search_result_type_text_selector"
             android:background="@drawable/search_result_button_bg"
             android:textSize="@dimen/title_text_size"
             android:text="@string/search_result_newest_button"/>
@@ -49,12 +51,13 @@
             android:layout_width="@dimen/search_result_type_btn_width"
             android:layout_height="@dimen/search_result_type_btn_height"
             android:layout_marginStart="@dimen/margin_25px"
-            android:textColor="@color/color_search_result_type_text"
+            android:textColor="@drawable/search_result_type_text_selector"
             android:background="@drawable/search_result_button_bg"
             android:textSize="@dimen/title_text_size"
             android:text="@string/search_result_hottest_button"/>
     </LinearLayout>
 
+    <!--片源提示-->
     <TextView
         android:id="@+id/search_source_tips"
         android:layout_width="wrap_content"
