--- a/iqiyi/src/main/res/layout/fragment_play_videoinfo_episodedetails.xml
+++ b/iqiyi/src/main/res/layout/fragment_play_videoinfo_episodedetails.xml
@@ -21,6 +21,7 @@
             android:layout_gravity="center"
             android:background="@drawable/ic_back_60" />
         <TextView
+            android:id="@+id/episode_details_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
