--- a/iqiyi/src/main/res/layout/activity_base_nav.xml
+++ b/iqiyi/src/main/res/layout/activity_base_nav.xml
@@ -27,7 +27,7 @@
                 android:layout_height="53px"
                 android:layout_marginStart="@dimen/margin_30px"
                 android:layout_marginTop="110px"
-                android:gravity="center"
+                android:gravity="left|top"
                 android:text="@string/app_name"
                 android:textColor="@color/color_nav_app_name"
                 android:textSize="@dimen/app_name_text_size"
