--- a/iqiyi/src/main/res/layout/item_my_setting.xml
+++ b/iqiyi/src/main/res/layout/item_my_setting.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_centerInParent="true"
-        android:layout_marginStart="@dimen/margin_23dp"
+        android:layout_marginStart="@dimen/margin_30px"
         android:textColor="@color/color_setting_item_text"
         android:textSize="@dimen/title_text_size"
         android:clickable="true"
@@ -26,9 +26,9 @@
         android:layout_alignParentEnd="true"
         android:layout_centerInParent="true"
         android:layout_toStartOf="@+id/my_setting_item_more"
-        android:layout_marginEnd="@dimen/margin_60dp"
+        android:layout_marginEnd="@dimen/margin_80px"
         android:textColor="@color/color_my_setting_item_tips"
-        android:textSize="@dimen/tag_text_size"
+        android:textSize="@dimen/text_size_30px"
         android:visibility="visible"/>
 
 
@@ -38,8 +38,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_centerInParent="true"
-        android:layout_marginEnd="@dimen/margin_23dp"
-        android:background="@drawable/my_setting_more" />
+        android:layout_marginEnd="@dimen/margin_30px"
+        android:background="@drawable/ic_setting_more" />
 
 
 </RelativeLayout>
