1、修复搜索结果是正片时，点击进入播放界面未加载剧集列表; 2、更换返回键图标UI; 3、修复播放界面清晰度UI显示问题。

--- a/iqiyi/src/main/res/layout/activity_account.xml
+++ b/iqiyi/src/main/res/layout/activity_account.xml
@@ -11,7 +11,7 @@
         android:layout_height="@dimen/account_back_size"
         android:layout_marginStart="@dimen/margin_20px"
         android:layout_marginTop="@dimen/margin_20px"
-        android:background="@drawable/ic_back_60"/>
+        android:background="@drawable/ic_back_60_2"/>
 
     <!--授权登录-->
     <androidx.constraintlayout.widget.ConstraintLayout
