--- a/iqiyi/src/main/res/layout/item_definition_btn.xml
+++ b/iqiyi/src/main/res/layout/item_definition_btn.xml
@@ -3,7 +3,7 @@
     android:layout_width="@dimen/player_definition_button_width"
     android:layout_height="@dimen/player_definition_button_height">
 
-    <Button
+    <TextView
         android:id="@+id/definition_name_btn"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
