--- a/iqiyi/src/main/res/layout/activity_disclaimers.xml
+++ b/iqiyi/src/main/res/layout/activity_disclaimers.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    app:cmd_scope="disclaimers">
 
     <!--关闭按钮-->
     <ImageView
@@ -60,6 +62,8 @@
             android:text="@string/user_agreement_and_privacy_protection_agree_btn"
             android:textColor="@drawable/disclaimer_button_text_selector"
             android:textSize="@dimen/title_text_size"
+            app:voice_cmd="同意并继续|同意|继续"
+            app:not_wake="true"
             style="?android:attr/buttonBarButtonStyle" />
 
         <!--不同意按钮-->
@@ -72,6 +76,8 @@
             android:text="@string/user_agreement_and_privacy_protection_disagree_btn"
             android:textColor="@drawable/disclaimer_button_text_selector"
             android:textSize="@dimen/title_text_size"
+            app:voice_cmd="@string/user_agreement_and_privacy_protection_disagree_btn"
+            app:not_wake="true"
             style="?android:attr/buttonBarButtonStyle" />
 
     </LinearLayout>
