1、修复行车提醒弹窗未显示问题; 2、行车提醒弹窗按钮增加点击态变化; 3、修复手动暂停播放，手动档切换自动档时，播放界面自动播放问题。

--- a/iqiyi/src/main/res/values-notnight/colors.xml
+++ b/iqiyi/src/main/res/values-notnight/colors.xml
@@ -160,5 +160,6 @@
     <color name="color_tips_dialog_separate_bg">#D4D7D9</color>
     <color name="color_flow_dialog_bg">#FFFFFF</color>
     <color name="color_flow_dialog_separate_bg">#D4D7D9</color>
+    <color name="color_dialog_press_status">#33000000</color>
 
 </resources>
