--- a/iqiyi/src/main/res/drawable-nodpi/dialog_left_button_bg.xml
+++ b/iqiyi/src/main/res/drawable-nodpi/dialog_left_button_bg.xml
@@ -1,25 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:state_pressed="false">
+        <layer-list>
+            <item>
+                <shape>
+                    <solid android:color="@color/color_flow_dialog_separate_bg" />
+                    <corners android:bottomLeftRadius="@dimen/radius_20px" android:bottomRightRadius="0dp" android:topLeftRadius="0dp" android:topRightRadius="0dp" />
+                </shape>
+            </item>
 
-    <item>
-        <shape>
-            <solid android:color="@color/color_flow_dialog_separate_bg"/>
-            <corners android:bottomLeftRadius="@dimen/radius_20px"
-                android:bottomRightRadius="0dp"
-                android:topLeftRadius="0dp"
-                android:topRightRadius="0dp" />
-        </shape>
+            <item android:right="1px" android:top="1px">
+                <shape>
+                    <solid android:color="@color/color_flow_dialog_bg" />
+                    <corners android:bottomLeftRadius="@dimen/radius_20px" android:bottomRightRadius="0dp" android:topLeftRadius="0dp" android:topRightRadius="0dp" />
+                </shape>
+            </item>
+        </layer-list>
     </item>
+    <item android:state_pressed="true">
+        <layer-list>
+            <item>
+                <shape>
+                    <solid android:color="@color/color_dialog_press_status" />
+                    <corners android:bottomLeftRadius="@dimen/radius_20px" android:bottomRightRadius="0dp" android:topLeftRadius="0dp" android:topRightRadius="0dp" />
+                </shape>
+            </item>
 
-    <item android:top="1px" android:right="1px">
-        <shape>
-            <solid android:color="@color/color_flow_dialog_bg" />
-            <corners android:bottomLeftRadius="@dimen/radius_20px"
-                android:bottomRightRadius="0dp"
-                android:topLeftRadius="0dp"
-                android:topRightRadius="0dp" />
-        </shape>
+            <item android:right="1px" android:top="1px">
+                <shape>
+                    <solid android:color="@color/color_dialog_press_status" />
+                    <corners android:bottomLeftRadius="@dimen/radius_20px" android:bottomRightRadius="0dp" android:topLeftRadius="0dp" android:topRightRadius="0dp" />
+                </shape>
+            </item>
+        </layer-list>
     </item>
-
-
-</layer-list>
+</selector>
